// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 images,  unchecked 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={false}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={false}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`2 images, 1 checked 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={true}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={false}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={false}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`2 images, all checked 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={true}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={true}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`inputed url 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <button
        className="display_button"
        disabled={false}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    />
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`not input 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    />
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;
